Include code for microcontroller to read GPS using updated chip_systems_cpp

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,5 @@
 platform = teensy
 board = teensy35
 framework = arduino
-lib_deps = bmm150, icm20649
+lib_deps = bmm150, icm20649, Adafruit_GPS, CDPA1616S 
 ; lib_ldf_mode = off
