Using updated version of chip systems (+1 squashed commit) Squashed commits: [7848c34] dev

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,11 @@
 platform = teensy
 board = teensy35
 framework = arduino
-lib_deps = bmm150, icm20649, Adafruit_GPS, CDPA1616S 
-; lib_ldf_mode = off
+lib_deps = 
+	bmm150
+	chip
+	icm20649
+	CDPA1616S
+	protocol
+	arduino_i2c
+	mbed-flotsam/Adafruit_GPS@0.0.0+sha.ba9ed1caafc3
